Fix alignment issues for product cards' content on mobile

--- a/packages/website_v2/src/components/Hero/Hero.scss
+++ b/packages/website_v2/src/components/Hero/Hero.scss
@@ -117,6 +117,7 @@
   padding: 0px 40px;
 
   @media screen and (max-width: 768px) {
+    padding: 0;
     position: relative;
     top: 0px;
   }
